--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,9 @@
 [submodule "zsh/plugins/zsh-completions"]
 	path = zsh/plugins/zsh-completions
 	url = https://github.com/zsh-users/zsh-completions.git
+[submodule "tools/git-extras"]
+	path = tools/git-extras
+	url = https://github.com/tj/git-extras.git
+[submodule "tools/git-quick-stats"]
+	path = tools/git-quick-stats
+	url = https://github.com/tj/git-extras.git
