--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "tools/fzf"]
 	path = tools/fzf
 	url = https://github.com/junegunn/fzf.git
+[submodule "tools/tldr-bash-client"]
+	path = tools/tldr-bash-client
+	url = https://github.com/pepa65/tldr-bash-client.git
